--- a/index.html
+++ b/index.html
@@ -2,42 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies Website</title>
 
-    <!-- ! Favicon -->
+    <!-- !Favicon -->
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 
     <!-- ! AOS CSS CDN -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <!-- ! Bootstrap Icons CDN -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+    <!-- !Bootstrap Icons CDN -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <!-- ! Fontawesome CDN -->
+    <!-- !Fontawesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- ! External CSS -->
+    <!-- ! External Css -->
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body>
-    
+<body class="index-body"> 
+    <div id="preloader"> </div>
 
+    <header>
+        <video id="index-video" src="video/johnwick.webm" autoplay muted loop></video>
+        <nav>
+            <div class="logo_ul">
+                <img src="img/logo.png" alt="">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Movies</a></li>
+                    <li><a href="#">Series</a></li>        
+                    <li><a href="#">Kids</a></li>
+                </ul>
+            </div>
+        </nav>
 
+        <div class="content">
+            <h1 id="title">Money Heist</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos delectus dolore quibusdam alias a repellendus vel voluptate unde velit inventore, maiores rerum corporis, sequi soluta omnis aspernatur corrupti voluptatibus maxime!</p>
+            <div class="details">
+                <h6>A Netflix Original Film</h6>
+                <h6 id="gen">Thriller</h6>
+                <h6>2021</h6>
+                <h6 id="rate"><span>IMDB</span><i class="bi bi-star-fill"></i>9.6</h6>
+            </div>
+            <div class="btns">
+                <a href="#" id="play">Watch<i class="bi bi-play-fill"></i></a>
+                <a href="#" id="download_main"><i class="bi bi-cloud-arrow-down-fill"></i></a>
+            </div>
+        </div>
+    </header>
 
-
-
-    <!-- ! AOS JS CDN -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-    <!-- ! AOS Init -->
-    <script>
-        AOS.init();
-    </script>
-
-    <!-- ! External JS -->
-    <script src="script.js"></script>
-</body>
-</html>
